--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href = "https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href = "assets/css/style.css" type="text/css">
 
 <body>
+
+
+    
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
             <h1 class="display-4">Guess the Basketball term</h1>
@@ -37,9 +41,16 @@
             </div>
     </div>
 
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12" id="letterButtons">
 
-    <script src="assets/javascript/game.js">
-    </script>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="assets/javascript/game.js"></script>
 </body>
 
 </html>
